TRAEFIK-INGRESS-CONTROLER/v2.x/v2.3/08-Deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-controller
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-controller
        name: traefik-ingress-controller
      annotations:
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8080'
        prometheus.io/traefik: 'true'
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: traefik-ingress-configmap
          configMap:
            name: traefik-ingress-configmap
        - name: traefik-tls-cert
          secret:
            secretName: traefik-tls-cert
      containers:
      - image: traefik:v2.3.1
        name: traefik-ingress-controller
        volumeMounts:
          - mountPath: "/config"
            name: "traefik-ingress-configmap"
          - mountPath: "/ssl"
            name: "traefik-tls-cert"
        ports:
        - name: web
          containerPort: 80
          hostPort: 80
        - name: websecure
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8080
          hostPort: 8080
        args:
        - --configfile=/config/traefik.toml
